# ProyectoFinalAprendizaje

./: .dockerignore  .env.dev  Analisis_Arquitectura_ML.ipynb  DEPLOYMENT.md  Dockerfile  Evidencia_Arquitectura_Base.ipynb  Evidencia_Funcionalidad_Agente.ipynb  Evidencia_Funcionalidad_ML.ipynb  README.md  container.py  docker-compose.yml  init_db.py  main.py  pyproject.toml  start.sh
api/: __init__.py  types.py
api/graphql/: __init__.py  queries.py  types.py
api/rest/: computer_endpoints.py  endpoints.py
config/: __init__.py  settings.py
data/app/: chunks.csv  faqs.csv
database/: __init__.py  connection.py  session.py
database/models/: __init__.py  computer.py  product_stock.py
domain/: __init__.py  faq_models.py  product_schemas.py
llm/: __init__.py  provider.py
llm/tools/: __init__.py  image_recognition_tool.py  product_search_tool.py
ml/: __init__.py
ml/models/: __init__.py  base.py  image_classifier.py  registry.py
ml/preprocessing/: __init__.py  base.py  image_preprocessor.py
ml/serving/: __init__.py  inference_service.py
ml/training/: __init__.py  experiment_tracker.py  trainer.py
services/: __init__.py  computer_service.py  product_service.py  search_service.py  tenant_data_service.py
shared/config/: settings.py
